refactor : 1. UrlConnection